--- a/index.html
+++ b/index.html
@@ -2,10 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta property="og:title" content="Interactive Khmer IPA Chart">
+  <meta property="og:description" content="Explore the sounds of Khmer with this interactive IPA chart. Click to hear each consonant and vowel sound.">
+  <meta property="og:image" content="https://raw.githubusercontent.com/nielsonhul/Khmer-IPA/main/hanuman.jpg">
+  <meta property="og:url" content="https://nielsonhul.github.io/Khmer-IPA/">
+  <meta property="og:type" content="website">
+
   <title>Interactive Khmer IPA Chart</title>
-  <!-- Link to your CSS file -->
   <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
   <h1>The Sounds of Khmer: An Interactive IPA Chart</h1>
    <h2>Click each box to hear the beginning consonant sound associated with the Khmer syllabic characters below them. For Vowels, you will hear the component vowel qualities used in constructing the complex system of vowels that we hear in spoken Khmer. </h2>
