--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta property="og:title" content="Interactive Khmer IPA Chart">
   <meta property="og:description" content="Explore the sounds of Khmer with this interactive IPA chart. Click to hear each consonant and vowel sound.">
-  <meta property="og:image" content="https://raw.githubusercontent.com/nielsonhul/Khmer-IPA/master/assets/hanuman.jpg">
+  <meta property="og:image" content="https://raw.githubusercontent.com/nielsonhul/Khmer-IPA/master/assets/hanuman.jpg?v=1">
   <meta property="og:url" content="https://nielsonhul.github.io/Khmer-IPA/">
   <meta property="og:type" content="website">
 
